# Chemist_robot3.0_v2

./: .gitignore
src/: Readme.md
src/platform/control/communication_rs485/: CMakeLists.txt  package.xml
src/platform/control/communication_rs485/config/: chemical_robot.config.yaml
src/platform/control/communication_rs485/include/communication_rs485/: hf_utils.h  rs485_control.h
src/platform/control/communication_rs485/launch/: multi_telecontrol.launch  telecontrol.launch
src/platform/control/communication_rs485/msg/: platformInfo.msg
src/platform/control/communication_rs485/src/: hf_utils.cpp  joy_to_twist_node.cpp  multi_platform_monitor_node.cpp  platform_monitor_node.cpp  rs485_control.cpp  rs485_control_node.cpp
src/platform/hf_mapping/karto/open_karto/: package.xml
src/platform/hf_nav/docking_tf/: CMakeLists.txt  package.xml
src/platform/hf_nav/docking_tf/src/: lidar_odometry.cpp  lidar_odometry_multi.cpp
src/platform/hf_nav/task_communication/: CMakeLists.txt  package.xml
src/platform/hf_nav/task_communication/include/: platform_communication.h
src/platform/hf_nav/task_communication/launch/: record_pose.launch  task_communication.launch
src/platform/hf_nav/task_communication/logfiles/: charge_glog.HF-chemical.chemical.log.INFO.20231113-152342.2968977  charge_glog.HF-chemical.chemical.log.INFO.20231123-134103.2701719  charge_glog.HF-chemical.chemical.log.INFO.20231126-183705.8306  charge_glog.HF-chemical.chemical.log.INFO.20231127-140245.2370226  charge_glog.HF-chemical.chemical.log.INFO.20231127-224825.3237935  charge_glog.HF-chemical.chemical.log.INFO.20231128-184735.23856  charge_glog.HF-chemical.chemical.log.INFO.20231204-182845.1136016  charge_glog.HF-chemical.chemical.log.INFO.20231219-180011.2434875  charge_glog.HF-chemical.chemical.log.INFO.20231223-132551.2263998  charge_glog.HF-chemical.chemical.log.INFO.20231223-172534.3491170  charge_glog.HF-chemical.chemical.log.INFO.20240103-224831.2995975  charge_glog.HF-chemical.chemical.log.INFO.20240109-232919.1120267  charge_glog.HF-chemical.chemical.log.WARNING.20231120-194347.18641  charge_glog.HF-chemical.chemical.log.WARNING.20231124-174933.330847  charge_glog.HF-chemical.chemical.log.WARNING.20231125-115715.2235369  charge_glog.HF-chemical.chemical.log.WARNING.20231130-002143.2930567  charge_glog.HF-chemical.chemical.log.WARNING.20231215-200227.128671  charge_glog.HF-chemical.chemical.log.WARNING.20231218-175934.442059  charge_glog.HF-chemical.chemical.log.WARNING.20231220-201603.417785  charge_glog.HF-chemical.chemical.log.WARNING.20240105-173035.5311  charge_glog.INFO  charge_glog.WARNING
src/platform/hf_nav/task_communication/scripts/: fake_navigation.py  fake_navigation_in.py
src/platform/hf_nav/task_communication/src/: hf_record_pose_node.cpp  multi_communication.py  multi_communication_backup.py  platform_communication.cpp  record_platform_pose_carto.py
src/platform/hf_nav/task_communication/start_sh/: start.sh
src/platform/hf_nav/task_communication/station_cfg/201/: camera_pose.json  station_english_new.json
src/platform/hf_nav/task_communication/station_cfg/201_0930/: station_english_new.json
src/platform/hf_nav/task_communication/station_cfg/9019/: camera_pose.json  station_english_new.json
src/platform/none_move_base_nav/none_move_base_adapter/: CMakeLists.txt  package.xml
src/platform/none_move_base_nav/none_move_base_bringup/: CMakeLists.txt  package.xml
src/platform/none_move_base_nav/none_move_base_bringup/config/: behavior.yaml  global_planner.yaml  local_controller.yaml  local_controller_hw_debug.yaml  local_controller_ridgeback_sim.yaml  local_planner_mpcdcbf.yaml  local_planner_mpcdcbf_hw_debug.yaml  local_planner_mpcdcbf_sim_debug.yaml  navigator.yaml  reach_checker.yaml
src/platform/none_move_base_nav/none_move_base_bringup/launch/: parallel_debug.launch  parallel_debug_mpcdcbf.launch  ridgeback_sim_amcl_debug.launch  ridgeback_sim_carto_mapping.launch  ridgeback_sim_debug.launch
src/platform/none_move_base_nav/none_move_base_bringup/launch/include/: debug_tools.launch  localization_only.launch  navigation_core.launch  navigation_core_mpcdcbf.launch  ridgeback_sim_amcl_localization.launch  ridgeback_sim_localization.launch
src/platform/none_move_base_nav/none_move_base_bringup/scripts/: phase1_smoke_test.py  send_relative_goal.py
src/platform/none_move_base_nav/none_move_base_common/: CMakeLists.txt  package.xml
src/platform/none_move_base_nav/none_move_base_common/src/: frame_transform.cpp  pose_utils.cpp  reach_checker.cpp  station_pose_loader.cpp  status_codec.cpp
src/platform/none_move_base_nav/none_move_base_global/: CMakeLists.txt  package.xml
src/platform/none_move_base_nav/none_move_base_global/src/: astar_planner.cpp  global_planner_node.cpp  grid_adapter.cpp  path_postprocessor.cpp
src/platform/none_move_base_nav/none_move_base_local/: CMakeLists.txt  package.xml
src/platform/none_move_base_nav/none_move_base_local/src/: goal_checker.cpp  local_controller_node.cpp  obstacle_adapter.cpp  path_tracker_controller.cpp  velocity_limiter.cpp
src/platform/none_move_base_nav/none_move_base_local_planner/: CMakeLists.txt  package.xml
src/platform/none_move_base_nav/none_move_base_local_planner/src/: mpc_dcbf_planner_node.cpp
src/platform/none_move_base_nav/none_move_base_msgs/: CMakeLists.txt  package.xml
src/platform/none_move_base_nav/none_move_base_msgs/action/: NavigateTask.action
src/platform/none_move_base_nav/none_move_base_msgs/msg/: BehaviorState.msg  NavigationStatus.msg  PathTrackingState.msg
src/platform/none_move_base_nav/none_move_base_msgs/srv/: ReloadStationPoses.srv
src/platform/none_move_base_nav/none_move_base_navigation/: CMakeLists.txt  package.xml
src/platform/none_move_base_nav/none_move_base_navigation/src/: navigator_server_node.cpp
src/platform/ridgeback/ridgeback_test/: CMakeLists.txt  package.xml
src/platform/ridgeback/ridgeback_test/launch/: multi_ridgeback_world.launch  ridgeback_world.launch
src/platform/ridgeback/ridgeback_test/src/: lidar_odometry_rg.cpp  lidar_odometry_rg_single.cpp
(+193 files in other folders)
