<?xml version="1.0"?>
<package format="2">
  <name>none_move_base_adapter</name>
  <version>0.0.1</version>
  <description>Reserved adapter package for none_move_base phase 2.</description>

  <maintainer email="a@todo.todo">a</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>aichem_msg_srv</build_depend>
  <build_depend>none_move_base_common</build_depend>
  <build_depend>none_move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>aichem_msg_srv</build_export_depend>
  <build_export_depend>none_move_base_common</build_export_depend>
  <build_export_depend>none_move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>aichem_msg_srv</exec_depend>
  <exec_depend>none_move_base_common</exec_depend>
  <exec_depend>none_move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
