<?xml version="1.0"?>
<package format="2">
  <name>open_karto</name>
  <version>1.2.3</version>
  <description>Catkinized ROS packaging of the OpenKarto library</description>

  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <maintainer email="luc.bettaieb@gmail.com">Luc Bettaieb</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>sparse_bundle_adjustment</build_depend>

  <build_export_depend>boost</build_export_depend>
  <build_export_depend>sparse_bundle_adjustment</build_export_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>sparse_bundle_adjustment</exec_depend>

</package>
